--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Skia is a complete 2D graphic library for drawing Text, Geometries, and Images.
 
-See full details, and build instructions, at https://sites.google.com/site/skiadocs/home
+See full details, and build instructions, at https://skia.org.
 
 This version of Skia is adapted for use by the Servo project and rust-azure. Changes
 from upstream Skia:
